# whatsurname

./: 404.html  README.md  analyzer.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
docs/: api.md
search/: search_index.json
whatsurname/: __init__.py  analyzer.py  cli.py  main.py  tui.py
